# fact-check-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
devvit/: README.md  devvit.json  package-lock.json  package.json  tsconfig.json
devvit/src/clients/: google.ts  llm.ts  search.ts
devvit/src/core/: config.ts  jsonParse.ts  models.ts  pipeline.ts  prompts.ts  rendering.ts  triggers.ts
devvit/src/server/: index.ts
devvit/src/store/: cache.ts  rateLimit.ts  redis.ts  seen.ts
devvit/src/types/: devvit-payloads.ts
devvit/test/: cache.test.ts  config.test.ts  google.test.ts  helpers.ts  jsonParse.test.ts  llm.test.ts  pipeline.test.ts  rateLimit.test.ts  rendering.test.ts  search.test.ts  seen.test.ts  server.test.ts  triggers.test.ts
docs/: DEVVIT_PLAN.md  PLAN.md  REVIEW-devvit.md  REVIEW-google.md  REVIEW-roadmap.md  REVIEW.md
src/factcheckbot/: __init__.py  __main__.py  bot.py  config.py  google_factcheck.py  llm.py  logging_setup.py  metrics.py  models.py  pipeline.py  prompts.py  rate_limit.py  reddit_client.py  rendering.py  search.py  seen_store.py  triggers.py
tests/: conftest.py  fixtures.py  test_config.py  test_google_factcheck.py  test_llm.py  test_pipeline.py  test_rate_limit.py  test_reddit_client.py  test_rendering.py  test_search.py  test_seen_store.py  test_triggers.py
